# cookiecutter-python-project

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/tests/: test_hello.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: hello.py
{{cookiecutter.project_slug}}/: LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: api.md  index.md
{{cookiecutter.project_slug}}/tests/: test_hello.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: __init__.py  hello.py
